<resources>
    <string name="app_name">Tlappka</string>


    // Onboarding strings
    <string name="onboarding_skip">Přeskočit</string>
    <string name="onboarding_next">Další</string>
    //Titles
    <string name="onboarding_title_one">SDÍLEJ AKTIVITY, FOTKY A VIDEA.
SLEDUJ, OTLAPKUJ A KOMENTUJ AKTIVITU PŘÁTEL.</string>
    <string name="onboarding_title_two">VYRAŽ NA PROCHÁZKU
A POZVI SVÉ PŘÁTELE</string>
    <string name="onboarding_title_three">POZNEJ S MAZLÍČKY NOVÉ KAMARÁDY V OKOLÍ</string>
    <string name="onboarding_title_four">VYTVOŘ PROFIL PRO SEBE
A SVÉ MAZLÍČKY</string>
    //Descriptions
    <string name="onboarding_desc_one">Tady je svět nadšenců do zvířátek, kteří určitě ocení jakýkoli příspěvěk týkající se Tvého života s mazlíčky, ať už novou fotku, vtipné video nebo rekordně dlouhou procházku. Můžete vzájemně "otlapkovat" své aktivity a psát komentáře.</string>
    <string name="onboarding_desc_two">S Tlappkou je snadné zůstat aktivní! Zorganizuj události a pozvi své přátele a jejich mazlíčky. Naplánuj společnou procházku, nebo vyraž na procházku jen sám se svými mazlíky, využij GPS sledování trasy a pak svůj výkon sdílej s kamarády.</string>
    <string name="onboarding_desc_three">Tlappka propojuje majitele domácích mazlíčků. Snadno se seznámíš s novými lidmi podobného smýšlení nebo najdeš nového kamaráda pro svého mazlíčka. Vyhledej osobu a jejich zvířátko a pozvi je třeba na procházku.</string>
    <string name="onboarding_desc_four">Profil Tebe a Tvých mazlíčků jsou propojené a tak je orientace i pro Tvé přátele velmi jednoduchá a intuitivní. Není potřeba žádné dlouhé vyplňování - keep it simple and fun. Pár minut, vše je hotovo a můžeš naplno začít využívat Tlappku.</string>

    <string name="activity_singup_text">Přihlášení</string>
    <string name="activity_register_text">Registrace</string>
    <string name="activity_signin_button">Přihlásit se</string>
    <string name="activity_signin_noacc">Vytvořit účet</string>
    <string name="activity_register_noacc">Máte již účet? Přihlašte se</string>
    <string name="activity_name_text">Jméno</string>
    <string name="activity_email_text">Email</string>
    <string name="activity_password_text">Heslo</string>
    <string name="activity_email_text_error">Zadejte validní emailovou adresu</string>
    <string name="activity_password_text_error">Heslo musí mít minimální délku 4</string>
    <string name="activity_name_text_error">Jméno musí mít minimální délku 3</string>
    <string name="forgotten_password">Zapomněli jste heslo?</string>


    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="settings">Nastavení</string>
    <string name="help">Nápověda</string>
    <string name="about">O aplikaci</string>
    <string name="sign_out">Odhlásit se</string>
    <string name="main_news">Novinky</string>
    <string name="bottom_nav_home">DOMŮ</string>
    <string name="bottom_nav_notifications">OZNÁMENÍ</string>
    <string name="bottom_nav_friends">PŘÁTELÉ</string>
    <string name="bottom_nav_events">UDÁLOSTI</string>
    <string name="bottom_nav_profile">PROFIL</string>

    <string name="text_profile_fragment">Profil</string>
    <string name="text_home_fragment">Novinky</string>
    <string name="text_friends_fragment">Přátelé</string>
    <string name="text_event_fragment">Události</string>
    <string name="text_notifications_fragment">Oznámení</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_version">VERZE</string>
    <string name="about_version_content">Tlappka, verze 1.0.1</string>
    <string name="about_about_app">O APLIKACI</string>
    <string name="about_content">Tlappka je aplikace, která sociálně propojuje majitele domácích mazlíčků. Sdílejte fotky nebo videa, zorganizujte události nebo procházky se svými přáteli a podívejte se, co je u Vašich přátel a jejich mazlíčků nového. Spojte se s lidmi ze svého okolí a zůstaňte aktivní díky procházkám!\n\nDoufáme, že jako uživatel Tlappky si hlavně užijete spoustu zábavy a najdete nové kamarády pro sebe i své mazlíčky.</string>
    <string name="help_content">Zde bude nápověda</string>
    <string name="setting_content">Zde bude nastavení</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="faq">NEJČASTĚJŠÍ DOTAZY</string>
    <string name="contact_us">KONTAKTUJTE VÝVOJÁŘE</string>
    <string name="contacts">David Herel (hereldav@fel.cvut.cz)\nDaniela Hradilová (hradidan@fel.cvut.cz)\nNela Petrželková (petrznel@fel.cvut.cz)</string>

    <!-- Profile titles -->

    <string name="profile_edit_profile">Upravit profil</string>
    <string name="account_settings_string">Nastavení účtu</string>
    <string name="notifications_settings_string">Nastavení oznámení</string>
    <string name="location_settings_string">Nastavení polohy</string>
    <string name="dialog_header">Zadejte Vaše stávající heslo:</string>
    <string name="old_password">Staré heslo</string>
    <string name="new_password">Nové heslo</string>
    <string name="new_password_again">Nové heslo podruhé</string>
    <string name="change_password">Změnit heslo</string>
    <string name="event_tab_history">Historie</string>
    <string name="event_tab_planned">Plánované</string>
    <string name="add_new_activity">Vytvořit novou událost</string>
    <string name="find_activity">Najít událost</string>

    <!-- Events-->
    <string name="create_event_toolbar_text">Vytvoření události</string>
    <string name="public_event">Veřejná</string>
    <string name="private_event">Soukromá </string>
    <string name="enable_GPS">Povolit GPS sledování</string>
    <string name="start_now">Začít hned</string>
    <string name="choose_time">Vybrat čas</string>
    <string name="invite_friends">Pozvat přátele</string>
    <string name="event_name">Název události (max. 35 znaků)</string>
    <string name="create_event_other">Jiné</string>
    <string name="create_event_walk">Procházka</string>
    <string name="event_type_input">uveďte</string>
    <string name="event_type">Typ události</string>
    <string name="invited_friends">Pozvaní přátelé</string>
    <string name="event_description">Popište plán události.</string>
    <string name="now">Nyní</string>
    <string name="later">Později</string>
    <string name="event_start_time">Začátek konání události</string>
    <string name="choose_date">Vybrat datum</string>
    <string name="title_activity_maps">Map</string>

    <string name="address_search">Vyhledat adresu, město nebo stát</string>
    <string name="choose_location">Vyberte místo konání událsoti</string>
    <string name="edit">Upravit</string>
    <string name="delete">Smazat</string>
    <string name="end">Ukončit</string>
    <string name="options">⋮</string>
    <string name="begin_time_string">Začátek</string>
    <string name="end_time_string">Konec</string>
    <string name="empty_history">Nemáte žádné proběhlé události</string>
    <string name="empty_planned">Nemáte žádné naplánované události</string>
    <string name="title_activity_walk_event">Procházka</string>
</resources>
