<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- TODO: Implement badges for notifications section -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/bottom_nav_home"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_white_24dp"
        android:title="@string/bottom_nav_profile"/>
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_calendar_icon"
        android:title="@string/bottom_nav_events"/>
    <item
        android:id="@+id/nav_friends"
        android:icon="@drawable/ic_friends_icon"
        android:title="@string/bottom_nav_friends"/>
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications_icon"
        android:title="@string/bottom_nav_notifications"/>
</menu>