<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".options.SettingsActivity">

        <include
            android:id="@+id/settings_toolbar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/account_settings_button"
            android:text="@string/account_settings_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_toolbar"
            style="@style/settings_button" />

        <Button
            android:id="@+id/notifications_settings_button"
            style="@style/settings_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notifications_settings_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_settings_button" />

        <Button
            android:id="@+id/location_settings_button"
            style="@style/settings_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/location_settings_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifications_settings_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>